more work done, login logout 404, drawer and table view

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd": "^4.11.2",
+    "axios": "^0.21.1",
     "next": "10.0.5",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
