--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "antd": "^4.11.2",
+    "@geist-ui/react": "^2.1.3",
+    "@geist-ui/react-icons": "^1.0.1",
     "axios": "^0.21.1",
     "next": "10.0.5",
     "nprogress": "^0.2.0",
@@ -16,5 +17,9 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "sass": "^1.32.5"
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.12.1",
+    "webpack-cli": "^4.4.0"
   }
 }
