--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "next": "10.0.5",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
+    "recharts": "^2.0.7",
     "sass": "^1.32.5"
   },
   "devDependencies": {
