--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
+    "react-transition-group": "^4.4.1",
     "recharts": "^2.0.7",
     "sass": "^1.32.5"
   },
